deal with google drive download urls

--- a/tests/test_notebook.ipynb
+++ b/tests/test_notebook.ipynb
@@ -459,6 +459,466 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# on Anaconda Cloud free account has limited access to the internet (firewall) but it can read google drive\n",
+    "# therefore\n",
+    "from date_a_scientist import DateAScientist\n",
+    "\n",
+    "ds = DateAScientist(\n",
+    "    # date-a-scientist potrafi pobierać dane z internetu!\n",
+    "    df=\"https://drive.google.com/uc?export=download&id=121kjpjzmGr-EfFU8tsqS4TccU7Iw1--6&sep=%3B&encoding=utf-8\",\n",
+    "    column_descriptions=\"https://drive.google.com/uc?export=download&id=1GjWB4PAko3o49vwFABbavRFjHOA3mH4c\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Miejsce</th>\n",
+       "      <th>Numer startowy</th>\n",
+       "      <th>Imię</th>\n",
+       "      <th>Nazwisko</th>\n",
+       "      <th>Miasto</th>\n",
+       "      <th>Kraj</th>\n",
+       "      <th>Drużyna</th>\n",
+       "      <th>Płeć</th>\n",
+       "      <th>Płeć Miejsce</th>\n",
+       "      <th>Kategoria wiekowa</th>\n",
+       "      <th>...</th>\n",
+       "      <th>10 km Tempo</th>\n",
+       "      <th>15 km Czas</th>\n",
+       "      <th>15 km Miejsce Open</th>\n",
+       "      <th>15 km Tempo</th>\n",
+       "      <th>20 km Czas</th>\n",
+       "      <th>20 km Miejsce Open</th>\n",
+       "      <th>20 km Tempo</th>\n",
+       "      <th>Tempo Stabilność</th>\n",
+       "      <th>Czas</th>\n",
+       "      <th>Tempo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1787</td>\n",
+       "      <td>TOMASZ</td>\n",
+       "      <td>GRYCKO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>UKS BLIZA WŁADYSŁAWOWO</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>M30</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.926667</td>\n",
+       "      <td>00:44:47</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.106667</td>\n",
+       "      <td>01:01:43</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.386667</td>\n",
+       "      <td>0.031400</td>\n",
+       "      <td>01:04:59</td>\n",
+       "      <td>3.080509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ARKADIUSZ</td>\n",
+       "      <td>GARDZIELEWSKI</td>\n",
+       "      <td>WROCŁAW</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>ARKADIUSZGARDZIELEWSKI.PL</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>M30</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.983333</td>\n",
+       "      <td>00:45:26</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.143333</td>\n",
+       "      <td>01:03:08</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.540000</td>\n",
+       "      <td>0.038000</td>\n",
+       "      <td>01:06:23</td>\n",
+       "      <td>3.146875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3832</td>\n",
+       "      <td>KRZYSZTOF</td>\n",
+       "      <td>HADAS</td>\n",
+       "      <td>POZNAŃ</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>M20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.123333</td>\n",
+       "      <td>00:47:34</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.236667</td>\n",
+       "      <td>01:05:09</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.516667</td>\n",
+       "      <td>0.024067</td>\n",
+       "      <td>01:08:24</td>\n",
+       "      <td>3.242475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>416</td>\n",
+       "      <td>DAMIAN</td>\n",
+       "      <td>DYDUCH</td>\n",
+       "      <td>KĘPNO</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>AZS POLITECHNIKA OPOLSKA</td>\n",
+       "      <td>M</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>M30</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.196667</td>\n",
+       "      <td>00:48:49</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.330000</td>\n",
+       "      <td>01:06:54</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.616667</td>\n",
+       "      <td>0.025467</td>\n",
+       "      <td>01:10:16</td>\n",
+       "      <td>3.330963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8476</td>\n",
+       "      <td>KAMIL</td>\n",
+       "      <td>MAŃKOWSKI</td>\n",
+       "      <td>MIRKÓW</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>PARKRUN WROCŁAW</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>M20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.276667</td>\n",
+       "      <td>00:49:31</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.386667</td>\n",
+       "      <td>01:07:27</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.586667</td>\n",
+       "      <td>0.023000</td>\n",
+       "      <td>01:10:27</td>\n",
+       "      <td>3.339654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8945</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8901</td>\n",
+       "      <td>KAROL</td>\n",
+       "      <td>ŻUKOWSKI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ovb Polska</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M30</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DNF</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8946</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>659</td>\n",
+       "      <td>KORNELIA</td>\n",
+       "      <td>ŻUKROWSKA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>K</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>K30</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8947</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6402</td>\n",
+       "      <td>MAGDALENA</td>\n",
+       "      <td>ŻÓRAŃSKA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Iławskie Świry Biegowe</td>\n",
+       "      <td>K</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>K40</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8948</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2771</td>\n",
+       "      <td>KATARZYNA</td>\n",
+       "      <td>ĆWIĄKALSKA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>K</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>K40</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8949</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2773</td>\n",
+       "      <td>JULIUSZ</td>\n",
+       "      <td>ĆWIĄKALSKI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M40</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8950 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Miejsce  Numer startowy       Imię       Nazwisko   Miasto Kraj  \\\n",
+       "0         1.0            1787     TOMASZ         GRYCKO      NaN  POL   \n",
+       "1         2.0               3  ARKADIUSZ  GARDZIELEWSKI  WROCŁAW  POL   \n",
+       "2         3.0            3832  KRZYSZTOF          HADAS   POZNAŃ  POL   \n",
+       "3         4.0             416     DAMIAN         DYDUCH    KĘPNO  POL   \n",
+       "4         5.0            8476      KAMIL      MAŃKOWSKI   MIRKÓW  POL   \n",
+       "...       ...             ...        ...            ...      ...  ...   \n",
+       "8945      NaN            8901      KAROL       ŻUKOWSKI      NaN  NaN   \n",
+       "8946      NaN             659   KORNELIA      ŻUKROWSKA      NaN  NaN   \n",
+       "8947      NaN            6402  MAGDALENA       ŻÓRAŃSKA      NaN  NaN   \n",
+       "8948      NaN            2771  KATARZYNA     ĆWIĄKALSKA      NaN  NaN   \n",
+       "8949      NaN            2773    JULIUSZ     ĆWIĄKALSKI      NaN  NaN   \n",
+       "\n",
+       "                        Drużyna Płeć  Płeć Miejsce Kategoria wiekowa  ...  \\\n",
+       "0        UKS BLIZA WŁADYSŁAWOWO    M           1.0               M30  ...   \n",
+       "1     ARKADIUSZGARDZIELEWSKI.PL    M           2.0               M30  ...   \n",
+       "2                           NaN    M           3.0               M20  ...   \n",
+       "3      AZS POLITECHNIKA OPOLSKA    M           4.0               M30  ...   \n",
+       "4               PARKRUN WROCŁAW    M           5.0               M20  ...   \n",
+       "...                         ...  ...           ...               ...  ...   \n",
+       "8945                 Ovb Polska    M           NaN               M30  ...   \n",
+       "8946                        NaN    K           NaN               K30  ...   \n",
+       "8947     Iławskie Świry Biegowe    K           NaN               K40  ...   \n",
+       "8948                        NaN    K           NaN               K40  ...   \n",
+       "8949                        NaN    M           NaN               M40  ...   \n",
+       "\n",
+       "      10 km Tempo  15 km Czas 15 km Miejsce Open  15 km Tempo  20 km Czas  \\\n",
+       "0        2.926667    00:44:47                1.0     3.106667    01:01:43   \n",
+       "1        2.983333    00:45:26                2.0     3.143333    01:03:08   \n",
+       "2        3.123333    00:47:34                3.0     3.236667    01:05:09   \n",
+       "3        3.196667    00:48:49                5.0     3.330000    01:06:54   \n",
+       "4        3.276667    00:49:31                7.0     3.386667    01:07:27   \n",
+       "...           ...         ...                ...          ...         ...   \n",
+       "8945          NaN         NaN                NaN          NaN         NaN   \n",
+       "8946          NaN         NaN                NaN          NaN         NaN   \n",
+       "8947          NaN         NaN                NaN          NaN         NaN   \n",
+       "8948          NaN         NaN                NaN          NaN         NaN   \n",
+       "8949          NaN         NaN                NaN          NaN         NaN   \n",
+       "\n",
+       "     20 km Miejsce Open  20 km Tempo  Tempo Stabilność      Czas     Tempo  \n",
+       "0                   1.0     3.386667          0.031400  01:04:59  3.080509  \n",
+       "1                   2.0     3.540000          0.038000  01:06:23  3.146875  \n",
+       "2                   3.0     3.516667          0.024067  01:08:24  3.242475  \n",
+       "3                   4.0     3.616667          0.025467  01:10:16  3.330963  \n",
+       "4                   5.0     3.586667          0.023000  01:10:27  3.339654  \n",
+       "...                 ...          ...               ...       ...       ...  \n",
+       "8945                NaN          NaN               NaN       DNF       NaN  \n",
+       "8946                NaN          NaN               NaN       DNS       NaN  \n",
+       "8947                NaN          NaN               NaN       DNS       NaN  \n",
+       "8948                NaN          NaN               NaN       DNS       NaN  \n",
+       "8949                NaN          NaN               NaN       DNS       NaN  \n",
+       "\n",
+       "[8950 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds._df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Miejsce': 'Klasyfikacja Open',\n",
+       " 'Numer startowy': 'Z jakim numerem startowym wystartował zawodnik',\n",
+       " 'Drużyna': 'Nazwa drużyny',\n",
+       " 'Płeć Miejsce': 'Miejsce w kategorii płci',\n",
+       " 'Kategoria wiekowa Miejsce': 'Miejsce w kategorii wiekowej',\n",
+       " 'Rocznik': 'Rok urodzenia',\n",
+       " '5 km Czas': 'Czas po przebiegnięciu 5 km',\n",
+       " '5 km Miejsce Open': 'Miejsce w klasyfikacji Open po przebiegnięciu 5 km',\n",
+       " '5 km Tempo': 'Tempo przebiegnięcia pierwszych 5 km, w minutach na kilometr',\n",
+       " '10 km Czas': 'Czas po przebiegnięciu 10 km',\n",
+       " '10 km Miejsce Open': 'Miejsce w klasyfikacji Open po przebiegnięciu 10 km',\n",
+       " '10 km Tempo': 'Tempo przebiegnięcia od 6-10 km, w minutach na kilometr',\n",
+       " '15 km Czas': 'Czas po przebiegnięciu 15 km',\n",
+       " '15 km Miejsce Open': 'Miejsce w klasyfikacji Open po przebiegnięciu 15 km',\n",
+       " '15 km Tempo': 'Tempo przebiegnięcia od 11-15 km, w minutach na kilometr',\n",
+       " '20 km Czas': 'Czas po przebiegnięciu 20 km',\n",
+       " '20 km Miejsce Open': 'Miejsce w klasyfikacji Open po przebiegnięciu 20 km',\n",
+       " '20 km Tempo': 'Tempo przebiegnięcia od 16-20 km, w minutach na kilometr',\n",
+       " 'Tempo Stabilność': 'Stabilność tempa, im mniejsza wartość tym bardziej stabilne tempo, ujemna wartość\\xa0oznacza przyspieszenie, dodatnia spowolnienie',\n",
+       " 'Czas': 'Czas całkowity'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds._column_descriptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8950"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.chat(\"ile jest rekordów?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
