deal with google drive download urls

--- a/tests/test_notebook.ipynb
+++ b/tests/test_notebook.ipynb
@@ -469,6 +469,7 @@
     "\n",
     "ds = DateAScientist(\n",
     "    # date-a-scientist potrafi pobierać dane z internetu!\n",
+    "    # URLS rendered with https://sites.google.com/site/gdocs2direct/\n",
     "    df=\"https://drive.google.com/uc?export=download&id=121kjpjzmGr-EfFU8tsqS4TccU7Iw1--6&sep=%3B&encoding=utf-8\",\n",
     "    column_descriptions=\"https://drive.google.com/uc?export=download&id=1GjWB4PAko3o49vwFABbavRFjHOA3mH4c\",\n",
     ")"
